# meta-autoresearch

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.yaml  inner_agent.py  logger.py  meta_agent.py  program.md  pyproject.toml  run_meta.py  train.py
dashboard/: api.py  index.html
