[project]
name = "meta-autoresearch"
version = "0.1.0"
description = "Autonomous meta-optimization of LLM research instructions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Hérités d'autoresearch (inner agent) ---
    "kernels>=0.11.7",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    # --- Ajoutés pour le meta-agent ---
    "openai>=1.0.0",
    "flask>=3.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
